; ModuleID = '/home/carl/AnghaBench/SoftEtherVPN/src/Cedar/extr_WebUI.c_WuUniReplace.c'
source_filename = "/home/carl/AnghaBench/SoftEtherVPN/src/Cedar/extr_WebUI.c_WuUniReplace.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i32**, i32*, i32*)* @WuUniReplace to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @WuUniReplace(i32** %0, i32* %1, i32* %2) #0 {
  %4 = alloca i32**, align 8
  %5 = alloca i32*, align 8
  %6 = alloca i32*, align 8
  %7 = alloca i32, align 4
  %8 = alloca i32*, align 8
  store i32** %0, i32*** %4, align 8
  store i32* %1, i32** %5, align 8
  store i32* %2, i32** %6, align 8
  %9 = load i32**, i32*** %4, align 8
  %10 = icmp eq i32** %9, null
  br i1 %10, label %17, label %11

11:                                               ; preds = %3
  %12 = load i32*, i32** %5, align 8
  %13 = icmp eq i32* %12, null
  br i1 %13, label %17, label %14

14:                                               ; preds = %11
  %15 = load i32*, i32** %6, align 8
  %16 = icmp eq i32* %15, null
  br i1 %16, label %17, label %18

17:                                               ; preds = %14, %11, %3
  br label %43

18:                                               ; preds = %14
  %19 = load i32**, i32*** %4, align 8
  %20 = load i32*, i32** %19, align 8
  store i32* %20, i32** %8, align 8
  %21 = load i32**, i32*** %4, align 8
  %22 = load i32*, i32** %21, align 8
  %23 = load i32*, i32** %5, align 8
  %24 = load i32*, i32** %6, align 8
  %25 = call i32 @UniCalcReplaceStrEx(i32* %22, i32* %23, i32* %24, i32 1)
  %26 = add nsw i32 %25, 1
  %27 = sext i32 %26 to i64
  %28 = mul i64 %27, 4
  %29 = trunc i64 %28 to i32
  store i32 %29, i32* %7, align 4
  %30 = load i32, i32* %7, align 4
  %31 = call i64 @Malloc(i32 %30)
  %32 = inttoptr i64 %31 to i32*
  %33 = load i32**, i32*** %4, align 8
  store i32* %32, i32** %33, align 8
  %34 = load i32**, i32*** %4, align 8
  %35 = load i32*, i32** %34, align 8
  %36 = load i32, i32* %7, align 4
  %37 = load i32*, i32** %8, align 8
  %38 = load i32*, i32** %5, align 8
  %39 = load i32*, i32** %6, align 8
  %40 = call i32 @UniReplaceStr(i32* %35, i32 %36, i32* %37, i32* %38, i32* %39)
  %41 = load i32*, i32** %8, align 8
  %42 = call i32 @Free(i32* %41)
  br label %43

43:                                               ; preds = %18, %17
  ret void
}

declare dso_local i32 @UniCalcReplaceStrEx(i32*, i32*, i32*, i32) #1

declare dso_local i64 @Malloc(i32) #1

declare dso_local i32 @UniReplaceStr(i32*, i32, i32*, i32*, i32*) #1

declare dso_local i32 @Free(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
